--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /* fonts */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 /* default */
 *{
     margin:0;
@@ -38,6 +38,14 @@ body{
     border: 0;
     height: 1px;
     background: linear-gradient(90deg, rgba(192, 204, 218, 0.1) 0%, rgba(192, 204, 218, 0.6) 50.38%, rgba(192, 204, 218, 0.1) 100%);
+}
+
+/* rating star design */
+
+.fa-star,.fa-star-half-alt{
+    font-size: 16px;
+    color:#FB8200;
+    
 }
 
 /* Heading title */
@@ -133,6 +141,7 @@ nav{
     align-items: center;
 }
 
+/* logo custom height width */
 .alibaba-logo{
     width: 55px;
     height: 31px;
@@ -164,6 +173,63 @@ nav{
     height: 38px;
 
 }
+
+/* popular collection */
+.popular-collection-heading{
+   font-weight: 600;
+   font-size: 28px;
+   text-align: center;
+   padding-top: 100px;
+   padding-bottom: 30px;
+
+}
+
+.popular-collection{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-row-gap: 30px;
+    grid-column-gap: 30px;
+}
+
+/* box shadow for items */
+.popular-collection > div{
+    width: 329px;
+    height: 476px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+    border-radius: 5px;
+    padding: 15px 18px;
+}
+
+.popular-collection > div img{
+    width: 100%;
+    height: 256px;
+
+}
+.popular-collection > div h3{
+    font-weight: 500;
+    font-size: 28px;
+    padding-bottom: 20px;
+}
+
+.item-price{
+    font-size: 24px;
+    font-weight: 400;
+    color: black;
+    padding-bottom: 22px;
+}
+.shipping-details{
+    font-size: 14px;
+    font-weight: 700;
+    color: #5E6366; 
+}
+
+
+
+
+
+
+
 
 
 
